mdapipkg/unpackaged/objects/AnalyticsMagicConfig__c.object
<CustomObject>
    <fields>
        <fullName>Config__c</fullName>
        <label>Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Icon_Name__c</fullName>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Analytics Magic Config</label>
    <nameField>
        <label>AnalyticsMagic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analytics Magic Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>